@@ -1,3 +1,8 @@
+2006-05-10  Daniel Holbach  <dholbach@ubuntu.com>
+
+	* gnome-da-capplet.c: (close_cb): update help section name. Closes
+	bug #340032.
+
 2006-03-23  Luca Cavalli  <loopback@slackit.org>
 
 	* gnome-default-applications.xml.in: Fix Thunderbird command line
